# git-commands

./: .gitignore  Cargo.toml  Makefile  compare.py  flake.nix  git-csv  git-main  remove-carraige.sh
compare/: Cargo.toml
compare/src/: lib.rs  main.rs
csv/: Cargo.toml
csv/src/: main.rs
meta/: Cargo.toml
meta/src/: lib.rs  main.rs
xlsx/: Cargo.toml  build.sh  init.sh
xlsx/src/: main.rs
