[package]
name = "txt2xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features=["derive"] }
anyhow = "1.0.65"
regex = "1"
lazy_static = "1.4.0"
xlsxwriter = "0.5.0"